Overlapping CSS stylesheets resolved. Changes to tab selector css. Export functionality temporarily down

--- a/css/editor.css
+++ b/css/editor.css
@@ -1,6 +1,6 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+@import "../node_modules/bulma/bulma.sass";
+@import "../node_modules/bulma/sass/elements/button.sass";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css";
-@import url("https://cdn.jsdelivr.net/npm/latex.js@0.12.4/dist/css/");
 @import url('./fontDefinitions.css');
 
 html, body {
@@ -35,18 +35,17 @@ html, body {
 }
 
 .editorArea {
-    top: 5vh;
     width: 41vw;
+    margin-top: 0.1vh;
     height: 93vh;
     border-right: 0.1px solid black;
-    position: absolute;   
 }
 
 .tabSelector {
     /*background-color: #4f4d8c;*/
-    height: 5vh;
+    margin: 0;
+    padding: 0;
     width: 41vw;
-    position: absolute;
 }
 
 /*.tabsGrouped {
@@ -157,6 +156,7 @@ textarea:focus {
 .openFolderBtnBounding {
     padding: 4vh;
     text-align: center;
+    font-family: "Jost-Regular"; 
 }
 
 .parentFolderIcon {
@@ -217,6 +217,10 @@ textarea:focus {
 
 .btnInsertBuffer {
     padding: 3vw;
+}
+
+.tabNameText {
+    font-family: "Jost-Regular"; 
 }
 
 body {
